--- a/Pipfile
+++ b/Pipfile
@@ -41,6 +41,7 @@ Flask = "==1.1.1"
 Jinja2 = "==2.11.1"
 MarkupSafe = "==1.1.1"
 Werkzeug = "==1.0.0"
+gdoctableapp = "*"
 
 [requires]
 python_version = "3.7"
